# supportdesk

./: README.md  pyproject.toml  setup.py
desk/: index.html  package.json  tailwind.config.js  vite.config.js
desk/src/: App.vue  index.css  main.js
desk/src/pages/: PortalNewTicket.vue  PortalTicketDetail.vue  PortalTickets.vue
desk/src/router/: index.js
supportdesk/: email_handler.py  hooks.py  modules.txt  patches.txt
supportdesk/ai/: __init__.py  hooks.py
supportdesk/api/: __init__.py  billing.py
supportdesk/automation/: __init__.py  run_automation.py
supportdesk/config/: desktop.py
supportdesk/patches/: __init__.py  create_supportdesk_workspace.py
supportdesk/portal/: __init__.py  portal_api.py
supportdesk/scheduler/: __init__.py  automation_runner.py  sla_checker.py
supportdesk/supportdesk/: __init__.py  find_bad_module.py
supportdesk/supportdesk/doctype/asset/: asset.json  asset.py
supportdesk/supportdesk/doctype/automation_rule/: automation_rule.json  automation_rule.py
supportdesk/supportdesk/doctype/labor_entry/: labor_entry.js  labor_entry.json  labor_entry.py
supportdesk/supportdesk/doctype/sla_policy/: sla_policy.json  sla_policy.py
supportdesk/supportdesk/doctype/supportdesk_settings/: supportdesk_settings.json  supportdesk_settings.py
supportdesk/supportdesk/doctype/template_checklist_item/: template_checklist_item.json  template_checklist_item.py
supportdesk/supportdesk/doctype/ticket/: ticket.js  ticket.json  ticket.py  ticket_list.js
supportdesk/www/portal/: new-ticket.html  ticket.html  ticket.py  tickets.html
(+7 files in other folders)
